--- a/app/src/main/res/layout/fragment_loan_calculator.xml
+++ b/app/src/main/res/layout/fragment_loan_calculator.xml
@@ -364,6 +364,7 @@
                 android:gravity="center"
                 >
                 <TextView
+
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1.35"
@@ -382,6 +383,7 @@
                     />
 
                 <TextView
+                    android:id="@+id/txt_loan_amount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".65"
@@ -464,6 +466,7 @@
                     />
 
                 <TextView
+                    android:id="@+id/txt_subscriptionF"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".65"
@@ -505,6 +508,7 @@
                     />
 
                 <TextView
+                    android:id="@+id/txt_subscriptionM"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".65"
@@ -546,6 +550,7 @@
                     />
 
                 <TextView
+                    android:id="@+id/txt_subscriptionL"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".65"
