--- a/app/src/main/res/layout/fragment_loan_calculator.xml
+++ b/app/src/main/res/layout/fragment_loan_calculator.xml
@@ -397,6 +397,89 @@
 
             </TableRow>
 
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="@dimen/_35sdp"
+                android:weightSum="2"
+                android:background="@drawable/table_divider_top_left_right"
+                android:gravity="center"
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.35"
+                    android:text="@string/loan_period"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+                <View
+                    android:layout_height="match_parent"
+                    android:background="#AAAAAA"
+                    android:layout_width="@dimen/_1sdp"
+                    />
+
+                <TextView
+                    android:id="@+id/txt_loan_period"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".65"
+                    android:text="@string/dash_line"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+            </TableRow>
+
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="@dimen/_35sdp"
+                android:weightSum="2"
+                android:background="@drawable/table_divider_top_left_right"
+                android:gravity="center"
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.35"
+                    android:text="@string/interest_rate_calculator"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+                <View
+                    android:layout_height="match_parent"
+                    android:background="#AAAAAA"
+                    android:layout_width="@dimen/_1sdp"
+                    />
+
+                <TextView
+                    android:id="@+id/txt_interest_rate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".65"
+                    android:text="@string/dash_line"
+                    android:gravity="center|start"
+                    android:padding="@dimen/_5sdp"
+                    android:textSize="@dimen/_11sdp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/textColors"
+                    />
+
+            </TableRow>
+
 
             <TableRow
                 android:layout_width="match_parent"
