--- a/app/src/main/res/layout/fragment_loan_calculator.xml
+++ b/app/src/main/res/layout/fragment_loan_calculator.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/screenBackground">
+    android:background="@color/screenBackground"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
 
@@ -218,7 +219,7 @@
             android:id="@+id/buttonCalculateLoan"
             android:layout_width="@dimen/_165sdp"
             android:layout_height="@dimen/_35sdp"
-            android:layout_marginTop="@dimen/_25sdp"
+            android:layout_marginTop="@dimen/_20sdp"
             android:background="@drawable/btn_round"
             android:fontFamily="@font/montserrat"
             android:text="@string/calculate_your_loan"
@@ -254,7 +255,8 @@
             app:layout_constraintTop_toBottomOf="@+id/view_divider"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             >
 
