--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -171,14 +171,12 @@
         android:id="@+id/txtLoanCalculator"
         android:gravity="center"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/_32sdp"
         android:layout_marginTop="@dimen/_15sdp"
-        android:padding="@dimen/_2sdp"
+        android:textSize="@dimen/_11sdp"
         android:text="@string/calculate_your_loan"
-        android:textColorHighlight="@android:color/white"
-        android:textColorLink="@color/colorAppDeep"
-        android:fontFamily="@font/montserrat"
-        android:textColor="@color/colorSemiBlack"
+        android:background="@drawable/bg_transparent_border_light_green_view"
+        android:textColor="@color/colorAppDeep"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtRegister" />
