--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/login_bg"
-    android:padding="@dimen/_40sdp"
+    android:paddingStart="@dimen/_40sdp"
+    android:paddingEnd="@dimen/_40sdp"
+    android:paddingTop="@dimen/_15sdp"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <ImageView
@@ -12,29 +14,45 @@
         android:contentDescription="@string/app_name"
         android:layout_width="@dimen/_75sdp"
         android:layout_height="@dimen/_75sdp"
-        android:layout_marginTop="@dimen/_25sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/lpesa_logo" />
 
     <com.app.l_pesa.common.CommonTextRegular
-        android:id="@+id/textView1"
+        android:id="@+id/txtTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/starter_loan"
+        android:text="@string/l_pesa_risk_free"
         android:textColor="@color/colorWhite"
-        android:textSize="@dimen/_20sdp"
+        android:textSize="@dimen/_15sdp"
         android:gravity="center"
-        android:textStyle="bold"
         android:padding="@dimen/_2sdp"
+        android:textAllCaps="true"
         android:fontFamily="@font/montserrat"
-        android:layout_marginTop="@dimen/_50sdp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
+        android:layout_marginTop="@dimen/_3sdp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
+
+    <com.app.l_pesa.common.CommonTextRegular
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/starter_loan"
+        android:textColor="@color/colorYellow"
+        android:textSize="@dimen/_18sdp"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:fontFamily="@font/montserrat"
+        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+
 
     <com.app.l_pesa.common.CustomButtonRegular
         android:id="@+id/buttonSignUp"
@@ -43,26 +61,28 @@
         android:background="@drawable/yellow_button"
         android:text="@string/get_started"
         android:fontFamily="@font/montserrat"
-        android:textColor="@color/colorSemiWhite"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/colorWhite"
         android:textStyle="bold"
-        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView1"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"/>
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+
+        />
 
     <com.app.l_pesa.common.CommonTextRegular
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/colorSemiWhite"
-        android:layout_marginTop="@dimen/_10sdp"
         android:textStyle="bold"
+        android:gravity="center"
+        android:textSize="@dimen/_12sdp"
         android:fontFamily="@font/montserrat"
         android:text="@string/already_using_lpesa"
+        android:layout_marginBottom="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
         app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
         />
 
@@ -70,13 +90,14 @@
         android:id="@+id/buttonLogin"
         android:layout_width="0dp"
         android:layout_height="@dimen/_35sdp"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_25sdp"
         android:background="@drawable/bg_black_view"
         android:text="@string/sign_in"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/colorSemiWhite"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
