--- a/app/src/main/res/layout/fragment_dashboard_layout.xml
+++ b/app/src/main/res/layout/fragment_dashboard_layout.xml
@@ -173,7 +173,7 @@
                 android:text="@string/your_credit_score"
                 android:textSize="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_2sdp"
-                android:textColor="@color/color_gray_text"/>
+                android:textColor="@color/dark_text_color"/>
 
 
                 <com.warkiz.widget.IndicatorStayLayout
@@ -188,10 +188,11 @@
                         android:layout_height="wrap_content"
                         app:isb_show_indicator="rectangle"
                         app:isb_track_background_color="@color/colorRedLight"
-                        app:isb_track_background_size="@dimen/_5sdp"
+                        app:isb_track_background_size="@dimen/_3sdp"
                         app:isb_track_progress_color="#2bbd83"
                         app:isb_track_progress_size="@dimen/_5sdp"
                         app:isb_thumb_color="#08a9ea"
+                        app:isb_indicator_color="@color/colorRedLight"
 
                     />
 
