--- a/app/src/main/res/layout/layout_list_dashboard_loan.xml
+++ b/app/src/main/res/layout/layout_list_dashboard_loan.xml
@@ -40,7 +40,8 @@
                 android:layout_marginStart="@dimen/_3sdp"
                 app:layout_constraintEnd_toStartOf="@+id/viewDividerOne"
                 app:layout_constraintStart_toEndOf="@+id/imgLoan"
-                app:layout_constraintTop_toTopOf="@+id/imgLoan" />
+                app:layout_constraintTop_toTopOf="@+id/imgLoan"
+                app:layout_constraintBottom_toTopOf="@+id/txt_loan_details"/>
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txt_loan_details"
@@ -98,7 +99,7 @@
                         android:gravity="center|start"
                         android:text="@string/app_name"
                         android:textColor="@color/dark_text_color"
-                        android:textSize="@dimen/_10sdp"
+                        android:textSize="@dimen/_12sdp"
                         android:layout_marginStart="@dimen/_2sdp"
 
                         />
@@ -108,6 +109,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_3sdp"
+                        android:paddingBottom="@dimen/_10sdp"
                         android:fontFamily="@font/montserrat"
                         android:gravity="center|start"
                         android:text="@string/app_name"
