--- a/app/src/main/res/layout/content_otp.xml
+++ b/app/src/main/res/layout/content_otp.xml
@@ -20,17 +20,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
+            <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/your_otp_code"
-                android:textColor="@color/colorTextBlack"
-                android:textSize="@dimen/_14sdp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:layout_marginTop="@dimen/_25sdp"
+                android:textColor="@color/colorTextBlackLight"
+                android:textSize="@dimen/_13sdp"
+                android:gravity="center|start"
+                android:padding="@dimen/_2sdp"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:justificationMode="inter_word"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +52,7 @@
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/_14sdp"
                 app:itemCount="6"
-                app:lineColor="@color/colorPrimary"
+                app:lineColor="@color/colorAquaDeep"
                 app:itemSpacing="@dimen/_5sdp"
                 app:layout_constraintTop_toBottomOf="@+id/txtHeader"
                 app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +65,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
-                android:text="@string/resend_otp"
+                android:text="@string/resend_verification"
                 android:textColor="@color/colorTextBlack"
                 android:textSize="@dimen/_11sdp"
                 android:gravity="center|end"
@@ -79,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorTextBlack"
-                android:textSize="@dimen/_11sdp"
+                android:textSize="@dimen/_12sdp"
                 android:gravity="center|end"
                 android:visibility="invisible"
                 android:layout_marginTop="@dimen/_10sdp"
