--- a/app/src/main/res/layout/content_otp.xml
+++ b/app/src/main/res/layout/content_otp.xml
@@ -51,6 +51,10 @@
                 android:inputType="numberSigned"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/_14sdp"
+                android:cursorVisible="true"
+                android:focusable="true"
+                app:cursorWidth="1px"
+                app:cursorColor="@color/colorAppLight"
                 app:itemCount="6"
                 app:lineColor="@color/colorAquaDeep"
                 app:itemSpacing="@dimen/_5sdp"
