--- a/app/src/main/res/layout/layout_country.xml
+++ b/app/src/main/res/layout/layout_country.xml
@@ -1,37 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/rlRoot"
-android:layout_width="match_parent"
-android:layout_height="@dimen/_45sdp"
-android:gravity="center|start"
-            >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rlRoot"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/_35sdp"
+    android:gravity="center|start"
+    android:background="@color/colorWhite"
+    >
 
     <RelativeLayout
         android:id="@+id/rlData"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_44sdp"
-
+        android:layout_height="@dimen/_34sdp"
         >
-
-            <ImageView
-                android:id="@+id/img_flag"
-                android:contentDescription="@string/app_name"
-                android:layout_width="@dimen/_28sdp"
-                android:layout_height="@dimen/_28sdp"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_centerInParent="true"
-                android:layout_alignParentStart="true"
-                />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txt_country_name"
                 android:fontFamily="@font/montserrat"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:layout_toEndOf="@+id/img_flag"
                 android:gravity="center|start"
+                android:layout_marginStart="@dimen/_10sdp"
                 android:textColor="@color/colorTextBlackLight"
                 android:textSize="@dimen/_12sdp" />
 
