--- a/app/src/main/res/layout/activity_registration_step_two.xml
+++ b/app/src/main/res/layout/activity_registration_step_two.xml
@@ -47,9 +47,31 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
 
+        <io.fotoapparat.view.CameraView
+            android:id="@+id/camera_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btnSubmit"/>
+
+        <Button
+            android:id="@+id/btnSubmit"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_45sdp"
+            android:background="@drawable/yellow_button"
+            android:text="@string/final_step"
+            android:textColor="@color/colorBlack"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/camera_view"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
 
-         <com.app.l_pesa.common.AutoFitTextureView
+        <!-- <com.app.l_pesa.common.AutoFitTextureView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/mySurfaceView"
@@ -70,7 +92,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mySurfaceView" />
-
+-->
 
        <!-- <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtHeader"
