--- a/app/src/main/res/layout/layout_registration_step_three.xml
+++ b/app/src/main/res/layout/layout_registration_step_three.xml
@@ -21,7 +21,7 @@
         android:fontFamily="@font/montserrat"
         android:background="@color/screenBackground"
         android:justificationMode="inter_word"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/frameImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -41,22 +41,43 @@
 
         />-->
 
+    <FrameLayout
+        android:id="@+id/frameImage"
+        android:contentDescription="@string/app_name"
+        android:layout_width="@dimen/_125sdp"
+        android:layout_height="@dimen/_125sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtInfo"
+        app:layout_constraintBottom_toTopOf="@+id/tilName">
+
     <com.app.l_pesa.common.CircularImageView
         android:id="@+id/imageView"
         android:contentDescription="@string/app_name"
         android:layout_width="@dimen/_125sdp"
         android:layout_height="@dimen/_125sdp"
-        app:civ_border_width="0dp"
         android:scaleType="centerCrop"
+        app:civ_border_width="0dp"
+        app:srcCompat="@drawable/ic_user"
         app:civ_background_color="@android:color/white"
         app:civ_border_color="@android:color/white"
         app:civ_shadow="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtInfo"
-        app:layout_constraintBottom_toTopOf="@+id/tilName"
 
         />
+
+        <ImageView
+            android:id="@+id/imageEdit"
+            android:contentDescription="@string/app_name"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/ic_app_logo"
+            android:layout_gravity="top|end"
+
+            />
+
+    </FrameLayout>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/tilName"
@@ -64,7 +85,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/frameImage"
         app:layout_constraintBottom_toTopOf="@+id/tilCode"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
