--- a/app/src/main/res/layout/layout_registration_step_three.xml
+++ b/app/src/main/res/layout/layout_registration_step_three.xml
@@ -105,8 +105,8 @@
                 android:layout_height="@dimen/_40sdp"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:hint="@string/full_name"
-                android:inputType="textPersonName"
-                android:maxLength="25"
+                android:inputType="textCapSentences"
+                android:maxLength="35"
                 android:maxLines="1"
                 android:textColorHint="@color/color_gray_text"
                 android:textColor="@color/textColors"
